52_NetworkPolicies/configs/pod-centos.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-centos
  labels:
    app: healthchecker
spec:
  containers:
    - name: cntr-centos
      image: centos
      command: ["/bin/bash", "-c"]
      args:
        - |
          while true ; do
            date
            curl -s http://svc-clusterip-httpd.default.svc.cluster.local
            sleep 10
          done
