52_NetworkPolicies/configs/svc-NodePort-httpd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-apache-webserver
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 80
      nodePort: 31000
  selector:
    app: httpd_webserver
